--- a/LoginPage.html
+++ b/LoginPage.html
@@ -58,7 +58,7 @@
    </head>
    <body>
       <h2>Login Form</h2>
-      <form action="/action_page.php" method="post">
+      <form action="/accounts.php">
          <div class="imgcontainer">
          </div>
          <div class="container">
@@ -66,7 +66,7 @@
             <input type="text" placeholder="Enter Username" name="uname" required>
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
-            <button type="submit">Login</button>
+            <a href="index.html"><button type="submit">Login</button></a>
             <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
