--- a/SignUp.html
+++ b/SignUp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <style>
+   <!-- CSS for the page -->
       body {font-family: Arial, Helvetica, sans-serif;}
       * {box-sizing: border-box}
       /* Full-width input fields */
@@ -59,26 +60,36 @@
       .cancelbtn, .signupbtn {
       width: 100%;
       }
+	  <!-- End of CSS for the page -->
+	  
    </style>
+   <script src="EmailVal.js">
+   </script>
    <body>
-      <form action="/action_page.php" style="border:1px solid #ccc">
+      <form action="/accounts.php" style="border:1px solid #ccc">
+	  <!-- Info is filled out in the form -->
          <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
             <hr>
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
+			
+			<label for="email"><b>Email</b></lable>
+			<input type="text" placeholder="Enter Email" name="email" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required /> </label>
+			
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
+			
             <label for="psw-repeat"><b>Repeat Password</b></label>
             <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+			
             <label>
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
             </label>
             <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
             <div class="clearfix">
+			<!-- buttons to go back to index or to continue to sign up. -->
                <a href="index.html"><button type="button" class="cancelbtn">Cancel</button></a>
-               <button type="submit" class="signupbtn">Sign Up</button>
+               <a href="SignUpSuccessful.html"><button type="submit" class="signupbtn">Sign Up</button>
             </div>
          </div>
       </form>
